--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,19 @@ body
 {
     background-color: rgb(226, 226, 226);
 }
+@font-face
+{
+    font-family: 'icomoon';
+    src:url('../fonts/icomoon.eot?oifpaf');
+    src:  
+        url('../fonts/icomoon.eot?oifpaf#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?oifpaf') format('truetype'),
+        url('../fonts/icomoon.woff?oifpaf') format('woff'),
+        url('../fonts/icomoon.svg?oifpaf#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}  
 .bgc_transparent
 {
     background-color: transparent;
@@ -31,10 +44,10 @@ body
 {
     float: left;
     height: 100px;
-    font-size: 40px;
+    font-size: 210%;
     background-color: transparent;
     line-height: 100px;
-    margin-left: 100px;
+    margin-left: 6%;
 }
 .artfont a
 {
@@ -117,4 +130,29 @@ body
 {
     color: rgb(173, 80, 26);
     text-decoration: underline;
+}
+.contact
+{
+    text-align: center;
+    font-size: 40px;
+    padding-top: 70px;
+    color: rgb(226, 226, 226);
+}
+.contact_a
+{
+    color: rgb(199, 199, 199);
+    font-size: 30px;
+    text-decoration: none;
+    font-weight: 30px;
+}
+.platform
+{
+    position: absolute;
+    left: 50%;
+    margin-top: 25px;
+    width: 19%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
